hiển thị danh mục lên trang chủ

--- a/index.html
+++ b/index.html
@@ -36,11 +36,26 @@
     </div>
   </header>
   <div class="banner">
-    <img src="view/img/desk_header_0abb626df2.png" alt="">
+    <img src="view/img/banner1.png" alt="">
   </div>
   <main>
    <div class="productt">
     <br><br>
+    <h1>DANH MỤC SẢN PHẨM</h1>
+    <div class="danhmuc">
+      <ul>
+        <li><a href="">Iphone</a></li>
+        <li><a href="">Sámung</a></li>
+        <li><a href="">Oppo</a></li>
+        <li><a href="">Remi</a></li>
+        <li><a href="">Nokia</a></li>
+        <li><a href="">doremon</a></li>
+        <li><a href="">nobita</a></li>
+        <li><a href="">Iphone</a></li>
+      </ul>
+    </div>
+
+
       <h1>SẢN PHẨM NỔI BẬT</h1>
       <div class="product">
         <div class="pro-items">
