--- a/admin.html
+++ b/admin.html
@@ -6,7 +6,7 @@
   <title>LOGO</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="view/css/adminn.css">
 </head>
 <body>
   <div class="container-fluid">
@@ -37,7 +37,7 @@
         <div class="product">
             <h1>Quản lý danh sách sản phẩm</h1><br>
         <button>Thêm sản phẩm</button>
-        </div>
+        </div> 
         <table class="table table-striped">
           <thead>
             <tr>
@@ -64,15 +64,12 @@
                 <a href="#" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
               </td>
             </tr>
-            <!-- Add more rows as needed -->
+         
           </tbody>
         </table>
       </div>
     </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
