--- a/giohang.html
+++ b/giohang.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <div class="logo"><img src="img/Greeny.png" alt=""></div>
+    <div class="logo"><img src="view/img/logo1.png" alt=""></div>
     <nav>
       <ul>
         <li><a href="#">Trang chủ</a></li>
@@ -36,25 +36,47 @@
     </div>
   </header>
   <main>
-    <div class="ctsanpham">
-        <div class="boxtrai mr ">
-            <div class="row">
-                <div class="boxtitle">Sản phẩm chi tiết</div>
-                <div class="boxcontent">
-                    <img src="img/iphone-x-256gb-silver-400x400.jpg" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="boxtitle">Bình luận</div>
-                <div class="boxcontent"></div>
-            </div>
-            <div class="row">
-                <div class="boxtitle">Sản phẩm cùng loại</div>
-                <div class="boxcontent"></div>
-            </div>
-        </div>
-        <div class="boxphai demo"></div>
-    </div>
+    <table class="table table-striped" border="1">
+        <thead>
+          <tr>
+            <th>STT</th>
+            <th>Tên sản phẩn</th>
+            <th>Hình ảnh</th>
+            <th>Ngày sinh</th>
+            <th>Địa chỉ</th>
+            <th>Điện thoại</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>Vũ Mạnh</td>
+            <td>Hiệp</td>
+            <td>1/2003</td>
+            <td>Nam</td>
+            <td>096*******</td>
+            <td>
+                <a href=""><i class="fa-solid fa-pen-to-square"></i></a>
+                <a href=""><i class="fa-solid fa-trash"></i></a>
+            </td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Vũ Mạnh</td>
+            <td>Hiệp</td>
+            <td>1/2003</td>
+            <td>Nam</td>
+            <td>096*******</td>
+            <td>
+              <a href="#" class="btn btn-primary btn-sm"><i class="fas fa-eye"></i></a>
+              <a href="#" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
+              <a href="#" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
+            </td>
+          </tr>
+       
+        </tbody>
+      </table>
   </main>
 
   <footer>
